Fixed footer on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -783,6 +783,7 @@
 .footer {
   padding: 50px 0;
   background-color: #11161E;
+  position: relative;
 }
 
 @media screen and (max-width: 1440px) {
@@ -794,6 +795,12 @@
 @media screen and (max-width: 1023px) {
   .footer {
     padding: 50px 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    padding: 30px 0 20px;
   }
 }
 
@@ -830,3 +837,17 @@
   margin: 0 18px 0 0;
 }
 
+@media screen and (max-width: 767px) {
+  .footer__list {
+    margin-top: 10px;
+    flex-direction: column;
+  }
+  .logo_place_footer {
+    position: absolute;
+    top: 10%;
+    left: 48%;
+  }
+  .footer__link {
+    margin-top: 20px;
+  }
+}
